# invoice-api

./: Dockerfile  README.md  docker-compose.yaml  example-invoice.json  example-invoice.yaml  pyproject.toml  renovate.json  yaml2invoice.py
.github/workflows/: docker.yml
invoice_api/: main.py  schema.py
locale/de/LC_MESSAGES/: messages.po
locale/en/LC_MESSAGES/: messages.po
src/: main.py  schema.py  utils.py
templates/: default.html
tests/: context.py  test_main.py
