[project]
name = "invoice-api"
version = "0.1.0"
description = "Simple API for rendering neat PDF invoices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "segno>=1.6.6",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]
[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "httpx>=0.28.1,<0.29",
    "pytest-dependency>=0.6.0",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
